--- a/TODO
+++ b/TODO
@@ -8,6 +8,10 @@ Bugs
     (Or better yet, just ditch cmake)
 [ ] Implement trap detection.  Pit/Rock traps can appear 0.5-3.0 seconds
     after the player has moved or turned.
+[ ] Fire Phantoms
+[ ]   Should not move onto each other.
+[ ]   Should flash red & purple (~50% chance each frame).
+      (Save qu21778-p6-48A8-l3-phantom)
 
 
 1. Cleanup & Modernize Backend
@@ -44,6 +48,7 @@ Accelerate drawing and support 3D scenes & models.
 
 [X] Create OpenGL context and shader.
 [ ] Convert raster blits to GPU primitive lists.
+[ ] Separate map rendering from objects (sprites).
 [ ] Render 3D models.
 
 
