--- a/TODO
+++ b/TODO
@@ -3,7 +3,6 @@ xu4 Todo List & Roadmap
 Bugs
 ====
 
-[ ] Cannot exit when sleep! effect on party (sleep disables input).
 [ ] cmake must be run twice on Fedora 33 before it spits out a Makefile.
     (Or better yet, just ditch cmake)
 [ ] Implement trap detection.  Pit/Rock traps can appear 0.5-3.0 seconds
@@ -12,6 +11,8 @@ Bugs
 [ ]   Should not move onto each other.
 [ ]   Should flash red & purple (~50% chance each frame).
       (Save qu21778-p6-48A8-l3-phantom)
+[X] Cannot exit when sleep! effect on party (sleep disables input).
+    Fixed in commit bc6839a6.
 
 
 1. Cleanup & Modernize Backend
@@ -38,8 +39,9 @@ storage backends and simplify data access.
 [X] Replace uses of ConfigElement with Config methods that return
     data (raw structures if possible).
 [ ] Allow game to run by just placing binary in GOG Ultima 4 directory.
-[ ] Create xu4 binary package backend.
-[.]   Create pack-xu4 tool.
+[/] Create xu4 package backend (game modules).
+[X]   Create pack-xu4 tool.
+[ ]   Package overlay.
 
 
 3. Rendering with GPU
@@ -47,7 +49,7 @@ storage backends and simplify data access.
 Accelerate drawing and support 3D scenes & models.
 
 [X] Create OpenGL context and shader.
-[ ] Convert raster blits to GPU primitive lists.
+[/] Convert raster blits to GPU primitive lists.
 [ ] Separate map rendering from objects (sprites).
 [ ] Render 3D models.
 
@@ -59,6 +61,7 @@ Accelerate drawing and support 3D scenes & models.
 [ ] NPC editor
 [ ] Item editor (new equipment)
 [ ] Zone editor (path following)
+[ ] Composer/Animation editor (titles)
 
 
 5. Emulate Ulitma V
