--- a/TODO
+++ b/TODO
@@ -5,10 +5,12 @@ Bugs
 
 [ ] cmake must be run twice on Fedora 33 before it spits out a Makefile.
     (Or better yet, just ditch cmake)
+[ ] Animate moongate opening/closing during introduction.
 [ ] Stop vendors from moving away after speaking with them.
     Not sure if the turn shouldn't update or if they are locked in place.
 [ ] Implement trap detection.  Pit/Rock traps can appear 0.5-3.0 seconds
     after the player has moved or turned.
+[ ] Pit/Rock traps cause walls to jump up a moment (a shake effect).
 [ ] Fire Phantoms
 [ ]   Should not move onto each other.
 [ ]   Should flash red & purple (~50% chance each frame).
@@ -55,7 +57,7 @@ Accelerate drawing and support 3D scenes & models.
 
 [X] Create OpenGL context and shader.
 [/] Convert raster blits to GPU primitive lists.
-[ ] Separate map rendering from objects (sprites).
+[/] Separate map rendering from objects (sprites).
 [ ] Render 3D models.
 
 
