--- a/TODO
+++ b/TODO
@@ -3,10 +3,11 @@ xu4 Todo List & Roadmap
 Bugs
 ====
 
+[ ] HQX filter does not work at 5x scale.
 [X] Animate moongate opening/closing during introduction.
 [X] Stop vendors from moving away after speaking with them.  Turn updates
     normally for other NPCs.  Note that DOS follow behavior differs from xu4.
-[ ] Implement trap detection.  Pit/Rock traps can appear 0.5-3.0 seconds
+[X] Implement trap detection.  Pit/Rock traps can appear 0.0-3.0 seconds
     after the player has moved or turned.  If there are many in a corridor,
     only one appears.  If a trap was recently spotted that seems to be the
     most likely to appear again.  This same algorithm may be used when the
@@ -27,10 +28,10 @@ Bugs
 ==============================
 This will cleanup the code and start down the path to GPU rendering.
 
-[/] Cleanup backends.
+[X] Cleanup backends.
 [X]    Drop iOS due to lack of developer support.
-[/] Remove indexed (CLUT) images.
-[ ]    Re-implement text coloration.
+[X] Remove indexed (CLUT) images.
+[X]    Re-implement text coloration.
 [X]    Re-implement dungeon color remapping.
 [X] Create Allegro 5 backend.
 [/] Create GameServices.
@@ -49,7 +50,7 @@ storage backends and simplify data access.
 
 [X] Replace uses of ConfigElement with Config methods that return
     data (raw structures if possible).
-[ ] Allow game to run by just placing binary in GOG Ultima 4 directory.
+[-] Allow game to run by just placing binary in GOG Ultima 4 directory.
 [/] Create xu4 package backend (game modules).
 [X]   Create pack-xu4 tool.
 [ ]   Package overlay.
