TODO: Mark a couple issues as fixed.

--- a/TODO
+++ b/TODO
@@ -6,10 +6,12 @@ Bugs
 [ ] On Windows 7 (not Wine though) VGA intro card sequence renders badly and
     shows two cursors.
 [ ] HQX filter does not work at 5x scale.
-[ ] Death: In "You hear: <name>" message the name should be centered.
 [ ] Endgame infinity animation does not play.
 [ ] Endgame VGA virtue image colors are wrong.
 [ ] Pit/Rock traps (and Codex?) shaking should be confined to main view.
+[X] Death: In "You hear: <name>" message the name should be centered.
+[X] Ctrl keys do not work on Windows
+    Fixed in commit b2a5e2af
 
 
 1. Cleanup & Modernize Backend
