TODO: Fixed endgame issues.

--- a/TODO
+++ b/TODO
@@ -5,10 +5,10 @@ Bugs
 
 [ ] On Windows 7 (not Wine though) VGA intro card sequence renders badly and
     shows two cursors.
-[ ] HQX filter does not work at 5x scale.
-[ ] Endgame infinity animation does not play.
-[ ] Endgame VGA virtue image colors are wrong.
-[ ] Pit/Rock traps (and Codex?) shaking should be confined to main view.
+[-] HQX filter does not work at 5x scale.
+[X] Endgame infinity animation does not play.
+[X] Endgame VGA virtue image colors are wrong.
+[-] Pit/Rock traps shaking should be confined to main view.
 [X] Death: In "You hear: <name>" message the name should be centered.
 [X] Ctrl keys do not work on Windows
     Fixed in commit b2a5e2af
