--- a/TODO
+++ b/TODO
@@ -4,13 +4,14 @@ Bugs
 ====
 
 [ ] Ship bugs
-[ ]   Pirate ships are indecisive (toggle facing in place).  Seems like they
-      tend to move along their current facing in DOS version.
 [ ]   Player ship sunk by pirates/monsters should keep the hit graphic visible
       during death seq.
-[ ]   Player ship should only sink after damage goes below zero.
-[ ]   After storm sunk ship an adjacent pirate ship began combat (with no
+[ ]   Pirate ships sometimes flicker when moving.
+[X]   After storm sunk ship an adjacent pirate ship began combat (with no
       party members visible) then a segfault occurred.
+[X]   Player ship should only sink after damage goes below zero.
+[X]   Pirate ships are indecisive (toggle facing in place).  Seems like they
+      tend to move along their current facing in DOS version.
 [ ] Pit/Rock traps shaking should be confined to main view.
 [ ] Have seen "<player> is Killed!" printed twice (was fighting two enemies).
 [ ] HQX filter does not work at 5x scale.
